fixed the problem with overlapping elements (carousel and modal window)

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@
 /*SECURITY SYSYTEMS */
 .securitySystems {
   padding: 6% 0 4% 0;
+  z-index: -1;
 }
 
 .security-system-description {
@@ -132,9 +133,15 @@
   height: 40px;
 }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  z-index: -1;
+}
+
 .device-photos {
   margin-top: -50px;
   padding: 40px 0;
+  z-index: -1;
 }
 
 .ajax-devices {
