--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,7 +70,7 @@ div.company-slogan-button {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   transition: all 200ms ease-in-out;
   color: var(--main-blue);
-  z-index: 1;
+  z-index: 3;
 }
 
 .phone-icon-button:hover {
@@ -90,7 +90,7 @@ div.company-slogan-button {
   height: 65%;
   margin-left: -50%;
   text-align: left;
-  z-index: 1;
+  z-index: 3;
   text-align: center;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
